# Parser

./: .gitignore  CMakeLists.txt
include/: Feature.h  File.h  GenBankFeature.h  GenBankParser.h  Header.h  Parser.h  stdafx.h
src/: Feature.cpp  File.cpp  GenBankFeature.cpp  GenBankParser.cpp  Header.cpp  Parser.cpp  main.cpp  stdafx.cpp
test/: GenBankParserTests.cpp  GenBankParserTests.h  ParserTests.cpp  ParserTests.h
test/testfiles/: TestFeatureAsdomain.gbk  TestFeatureCDS.gbk  TestFeatureCDSMotif.gbk  TestFeatureCluster.gbk  TestFeatureGene.gbk  TestGenBankFile.gbk  TestGenBankFile2.gbk  TestMakingLinkers.gbk  TestMakingLinkers2.gbk
